--- a/frontend/src/styles/DashboardProfesional.css
+++ b/frontend/src/styles/DashboardProfesional.css
@@ -128,6 +128,7 @@
         grid-column-start: 1 !important;
         grid-row-start: 5 !important;
         margin-top: 6rem;
+        z-index: 10;
     }
 
     .chats-div-movil {
