update logo publi home

--- a/frontend/src/styles/ClinicaCard.css
+++ b/frontend/src/styles/ClinicaCard.css
@@ -40,3 +40,47 @@
         font-size: 24px;
     }
 }
+
+.clinica-card {
+    width: 100%;
+    max-width: 370px;
+    height: 263px;
+    border-radius: 24px;
+    min-height: auto;
+}
+
+@media (min-width: 768px) {
+    .clinica-card {
+        width: 100%;
+        max-width: 1274px;
+        height: 403px;
+        border-radius: 49px;
+    }
+
+    .clinica-card .logo-clinica {
+        width: 311px !important;
+        height: 157px !important;
+    }
+}
+
+.logo-clinica {
+    width: 147px;
+    height: 74px;
+}
+
+@media (max-width: 767px) {
+    .clinica-card {
+        padding-left: 30px !important; /* agregar esta línea */
+    }
+
+    .contact-align-left {
+        margin-left: 0;
+    }
+
+    .service-overlay {
+        position: relative;
+        top: -2px;
+        left: 21px;
+        margin-bottom: -15px;
+    }
+}
